Fix dark mode

--- a/styles/pageheader.module.less
+++ b/styles/pageheader.module.less
@@ -14,7 +14,7 @@
     font-size: 20px;
     line-height: 28px;
     font-weight: bold;
-    color: @cr-gray-3;
+    color: var(--cr-primary-text);
   }
 
   .tooltip {
@@ -23,9 +23,9 @@
 
   .explainer {
     padding: 5px;
-    background-color: #F0F0F0;
+    background-color: var(--cr-secondary-bg);
     border-radius: 14px;
-    color: @cr-gray-7;
+    color: var(--cr-primary-tooltip);
   }
 }
 
